# engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  spotlight.xml
.github/workflows/: ccpp.yml
include/engine/: boundingBox.hpp  buffers.hpp  camera.hpp  group.hpp  light.hpp  model.hpp  parser.hpp  transformations.hpp
include/generator/: box.hpp  cone.hpp  cylinder.hpp  patches.hpp  plane.hpp  sphere.hpp  torus.hpp
include/utils/: modelPoint.hpp  modelPoints.hpp  point.hpp  slices.hpp  types.hpp  visitor.hpp
models/: box.3d  cone.3d  cylinder.3d  plane.3d  sphere.3d  teapot.3d  torus.3d
report/F1/: Report.tex
report/F1/code/: cilindrov2.tex  cilindrov3.tex  spherev1.tex  spherev2.tex  spherev3.tex
report/F2/: Report.tex
report/F3/: Report.tex
report/F3/code/: TerrainBuffer.tex  apply_translation.tex  calculate_rotate.tex  draw_patchesv1.tex  draw_patchesv2.tex  get_bezier.tex  get_catmull_rom_point.tex  get_location.tex  model_display.text  model_loading.tex  parse_model.tex  patch_generator.tex
report/F4/: Report.tex
report/F4/code/: esfera.tex  torus.tex
scenes/: aligned_planets.xml  box.xml  castle.xml  catmull.xml  cone.xml  config.xml  cylinder.xml  example.xml  plane.xml  small_catmull.xml  solar.xml  sphere.xml  spotlight.xml  teapot.xml  terreno.xml  textures.xml  torus.xml
scenes/report/: caixa.xml  cilindro.xml  cone.xml  esfera.xml  lighting.xml  patches.xml  plano.xml  torito.xml  torus.xml
scripts/: planets.csv  plot_texture.py  satellites.csv  solar_system.py
scripts/minecraft/: minecraft.py  perlin.py
scripts/solar_system/: planets.csv  satellites.csv  solar_system.py
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  buffers.cpp  camera.cpp  group.cpp  light.cpp  main.cpp  model.cpp  model.hpp  parser.cpp  transformations.cpp
src/generator/: CMakeLists.txt  box.cpp  box.hpp  cone.cpp  cone.hpp  cylinder.cpp  main.cpp  patches.cpp  plane.cpp  plane.hpp  primitives.hpp  sphere.cpp  sphere.hpp  torus.cpp
src/utils/: CMakeLists.txt  point.cpp  point.hpp
